Feature/navigation and layout changes (#58)
* Rename all template to .html.j2 and remove unused

* Breakup tournament template into multiple files

* Missed 404 error template

* Return json response for 404 on /api/* paths

* Keep selected detail on tournament page

Page will now keep the selected view on the tournament page between
Schedule, Standings, Placing and Rosters during re-load and navigation.

Team entry in standings is now a link to the team page.

* remove broken symlink

--- a/scoreboard/static/css/style.css
+++ b/scoreboard/static/css/style.css
@@ -163,6 +163,10 @@ img.flag-thumb {
 	color: #333;
 }
 
+.standings-table a {
+	color: #333;
+}
+
 .roster-divider {
   border: 2px;
   border-color: black;
@@ -221,20 +225,9 @@ img.flag-thumb {
 		padding: 4px;
 	}
 
-	/* .standings-table>thead>tr>th:nth-child(2),
-	.standings-table>tbody>tr>td:nth-child(2),
-	.standings-table>thead>tr>th:nth-child(3),
-	.standings-table>tbody>tr>td:nth-child(3) {
-		display: block;
-	} */
-
 	.standings-table>thead>tr>th {
 		padding-left: 2px;
 		padding-right: 4px;
-	}
-
-	table.standing-table {
-		max-width: 90%;
 	}
 
   .footer-text {
