--- a/scoreboard/templates/faq.html.j2
+++ b/scoreboard/templates/faq.html.j2
@@ -1,7 +1,7 @@
-{% extends "layout.html" %}
+{% extends "layout.html.j2" %}
 
 {% block nav %}
-	{% include "nav_bar.html" with context %}
+	{% include "nav_bar.html.j2" with context %}
 {% endblock nav %}
 
 {% block main %}
