--- a/scoreboard/templates/show_print.html.j2
+++ b/scoreboard/templates/show_print.html.j2
@@ -1,4 +1,4 @@
-{% extends "print_layout.html" %}
+{% extends "print_layout.html.j2" %}
 
 {% block tabs %}
 <div id="page_body" class="container" style="margin-left:2em">
