--- a/scoreboard/templates/admin/show_login.html.j2
+++ b/scoreboard/templates/admin/show_login.html.j2
@@ -1,7 +1,7 @@
-{% extends "/admin/admin_layout.html" %}
+{% extends "/admin/admin_layout.html.j2" %}
 
 {% block nav %}
-	{% include "admin/nav_admin.html" with context %}
+	{% include "admin/nav_admin.html.j2" with context %}
 {% endblock nav %}
 
 {% block main %}
@@ -42,7 +42,7 @@
       </form>
 
 	  <div class="alert alert-info" role="alert">
-		  <p>If you are having trouble with your account please email me at 
+		  <p>If you are having trouble with your account please email me at
 			 <a href="mailto:info@uwhscores.com">info@uwhscores.com</a>
 		  </p>
 	  </div>
