--- a/scoreboard/templates/admin/show_users.html.j2
+++ b/scoreboard/templates/admin/show_users.html.j2
@@ -1,7 +1,7 @@
-{% extends "/admin/admin_layout.html" %}
+{% extends "/admin/admin_layout.html.j2" %}
 
 {% block nav %}
-	{% include "admin/nav_admin.html" with context %}
+	{% include "admin/nav_admin.html.j2" with context %}
 {% endblock nav %}
 
 {% block main %}
