--- a/scoreboard/templates/admin/common/admin_layout.html.j2
+++ b/scoreboard/templates/admin/common/admin_layout.html.j2
@@ -15,13 +15,15 @@
 
      <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
 </head>
-<body>
+<body class="d-flex flex-column vh-100">
   {% autoescape false %}
   {% block nav %}{% endblock %}
 
+  <main class="flex-shrink-0">
   {% block main %}{% endblock %}
+  </main>
   {% endautoescape %}
-  <footer class="footer">
+  <footer class="footer mt-auto">
     <div class="container">
       <p class="text-muted footer-text">&copy; 2021 UWHScores.com <a href="mailto:info@uwhscores.com">info@uwhscores.com</a>
     </div>
