--- a/scoreboard/templates/admin/pages/admin_users.html.j2
+++ b/scoreboard/templates/admin/pages/admin_users.html.j2
@@ -8,15 +8,11 @@
 
 <div id="page_body" class="container">
 	<div class="row page-header">
-		<div class="col-8">
-			<div class="">
-			<h1>Users</h1>
-			</div>
-		</div>
-		<div class="col-4">
+		<div class="col pb-2">
 			<button type="button" class="btn btn-primary btn-sm float-end" data-bs-toggle="modal" data-bs-target="#createUserModal">
 				<i class="bi bi-person-plus-fill" style="font-size: 1.25rem;"></i>  Create User
 			</button>
+			<h1>Users</h1>
 		</div>
 	</div>
 
