--- a/scoreboard/templates/pages/include_tournament/include_placings.html.j2
+++ b/scoreboard/templates/pages/include_tournament/include_placings.html.j2
@@ -1,7 +1,7 @@
 {% if placings %}
 <div id="places" class="">
 <h1>{{ titleText }} Placings</h1>
-<table id=places_tbl class="table table-striped">
+<table id=places_tbl class="table tablee-sm table-striped placings-table">
   <thead>
     <tr>
       <th>Place</th>
