--- a/scoreboard/templates/pages/include_tournament/include_rosters.html.j2
+++ b/scoreboard/templates/pages/include_tournament/include_rosters.html.j2
@@ -1,7 +1,7 @@
 {% if team_info and team_info.roster -%}
 <div id="roster" class="">
   <h1>{{ title_text }} Roster</h1>
-  <table id=roster_tbl class="table table-striped roster-table">
+  <table id=roster_tbl class="table table-sm table-striped roster-table">
     <thead>
       <tr>
         <th>Name</th>
