--- a/scoreboard/templates/pages/include_tournament/include_standings.html.j2
+++ b/scoreboard/templates/pages/include_tournament/include_standings.html.j2
@@ -1,64 +1,68 @@
 <div id="standings" class="row">
-{% for group in grouped_standings -%}
-<h4>
-{% if group and group in group_names -%}
-{{ group_names[group] }}
-{% elif group %}
-{{ group }}
-{%- else %}
-Standings
-{%- endif %}
-</h4>
-<table class="table table-striped standings-table">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Team</th>
-      <th>Points</th>
-      <th>Record</th>
-      <th>GA</th>
-      <th>GP</th>
-      <th>Overall</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for rank in grouped_standings[group] -%}
-    {% set team = rank.team -%}
-    <tr>
-      <td><strong>{{ rank.place }}</strong></td>
-      <!-- {{ team.team_id }} -->
-      {% if team.flag_url -%}
-      <td><img src="{{ team.flag_url.thumb }}" class="flag-thumb game-line"> <span class="game-line"> <a href="/t/{{tournament.short_name}}/team/{{team.team_id}}">{{ team.name }}</a> </span> </td>
-      {% else -%}
-      <td><a href="/t/{{tournament.short_name}}/team/{{team.team_id}}">{{ team.name }}</a></td>
-      {%- endif %}
-      <td>{{ team.points }} </td>
-      <td>{{ team.wins }}-{{ team.losses }}-{{ team.ties }}</td>
-      <td>{{ team.goals_allowed }}</td>
-      <td>{{ team.games_played }} </td>
-      <td>{{ team.wins_t }}-{{ team.losses_t }}-{{ team.ties_t }}</td>
-    </tr>
+  <div>
+    {% for group in grouped_standings -%}
+    <h4>
+    {% if group and group in group_names -%}
+    {{ group_names[group] }}
+    {% elif group %}
+    {{ group }}
+    {%- else %}
+    Standings
+    {%- endif %}
+    </h4>
+  </div>
+  <div>
+    <table class="table table-striped table-sm standings-table">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Team</th>
+          <th>Points</th>
+          <th>Record</th>
+          <th>GA</th>
+          <th>GP</th>
+          <th>Overall</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for rank in grouped_standings[group] -%}
+        {% set team = rank.team -%}
+        <tr>
+          <td><strong>{{ rank.place }}</strong></td>
+          <!-- {{ team.team_id }} -->
+          {% if team.flag_url -%}
+          <td><img src="{{ team.flag_url.thumb }}" class="flag-thumb game-line"> <span class="game-line"> <a href="/t/{{tournament.short_name}}/team/{{team.team_id}}">{{ team.name }}</a> </span> </td>
+          {% else -%}
+          <td><a href="/t/{{tournament.short_name}}/team/{{team.team_id}}">{{ team.name }}</a></td>
+          {%- endif %}
+          <td>{{ team.points }} </td>
+          <td>{{ team.wins }}-{{ team.losses }}-{{ team.ties }}</td>
+          <td>{{ team.goals_allowed }}</td>
+          <td>{{ team.games_played }} </td>
+          <td>{{ team.wins_t }}-{{ team.losses_t }}-{{ team.ties_t }}</td>
+        </tr>
+        {%- endfor %}
+      <tbody>
+    </table>
     {%- endfor %}
-  <tbody>
-</table>
-{%- endfor %}
 
-<div class="alert alert-info" role="alert">
-  <p>
-  <strong>Points -</strong> Primary ranking metric. Points earned from round-robin game play for standing.
-  {% if tournament.POINTS_WIN == 3 -%}
-  Teams earn three points for each win,
-  {% elif tournament.POINTS_WIN == 2 -%}
-  Teams earn two points for each win,
-  {%- endif %}
-  and one point for a tie.</br>
-  <strong>Record -</strong> Record in games played for points in standing. Wins-Losses-Ties. </br>
-  <strong>GA -</strong> Goals allowed in games played for standings, used as tie breaker. </br>
-  <strong>GP -</strong> Games played for standings. </br>
-  <strong>Overall -</strong> Total tournament record including non-standings games and brackets. Wins-Losses-Ties.
-  </p>
-  <p>
-  Standings are update as games are updated and includes all tie breakers. For more information on how standings are calculated and tie-breakers please see the <a href=/faq>FAQ</a>
-  </p>
-</div>
+    <div class="alert alert-info" role="alert">
+      <p>
+      <strong>Points -</strong> Primary ranking metric. Points earned from round-robin game play for standing.
+      {% if tournament.POINTS_WIN == 3 -%}
+      Teams earn three points for each win,
+      {% elif tournament.POINTS_WIN == 2 -%}
+      Teams earn two points for each win,
+      {%- endif %}
+      and one point for a tie.</br>
+      <strong>Record -</strong> Record in games played for points in standing. Wins-Losses-Ties. </br>
+      <strong>GA -</strong> Goals allowed in games played for standings, used as tie breaker. </br>
+      <strong>GP -</strong> Games played for standings. </br>
+      <strong>Overall -</strong> Total tournament record including non-standings games and brackets. Wins-Losses-Ties.
+      </p>
+      <p>
+      Standings are update as games are updated and includes all tie breakers. For more information on how standings are calculated and tie-breakers please see the <a href=/faq>FAQ</a>
+      </p>
+    </div>
+  </div>
 </div>
