--- a/scoreboard/templates/pages/players.html.j2
+++ b/scoreboard/templates/pages/players.html.j2
@@ -5,7 +5,7 @@
 {% endblock nav %}
 
 {% block main %}
-<div id="page_body" class="container page-container">
+<div id="page_body" class="container-fluid">
   <div class="row gy-3">
     {%- if player is not none -%}
     <div class="col-md-4 mt-4" id="player-search">
