--- a/scoreboard/templates/admin/common/admin_nav.html.j2
+++ b/scoreboard/templates/admin/common/admin_nav.html.j2
@@ -1,9 +1,9 @@
 {% block nav %}
     <!-- Navigation -->
     {% if request.host_url != "http://uwhscores.com/" -%}
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" role="navigation" style="background-color: #8A0808;">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation" style="background-color: #8A0808;">
     {% else %}
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" role="navigation">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation">
     {%- endif %}
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
