--- a/scoreboard/templates/admin/pages/admin.html.j2
+++ b/scoreboard/templates/admin/pages/admin.html.j2
@@ -35,7 +35,7 @@
 	</div>
 
 	<div class="row">
-		<div class="col-md-8">
+		<div class="col-md-8 pb-3">
 			<h3>Tournaments</h3>
 			{% if not tournaments -%}
 			<div class="well well-lg">
