--- a/scoreboard/templates/common/nav_bar.html.j2
+++ b/scoreboard/templates/common/nav_bar.html.j2
@@ -1,8 +1,8 @@
 {% block nav %}
   {% if request.host_url != "http://uwhscores.com/" -%}
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" style="background-color: #8A0808;" role="navigation">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="background-color: #8A0808;" role="navigation">
   {% else %}
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" role="navigation">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation">
   {%- endif %}
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
