--- a/scoreboard/templates/pages/tournament.html.j2
+++ b/scoreboard/templates/pages/tournament.html.j2
@@ -75,7 +75,7 @@
 		{%- endif %}
 
 		<div class="col-md-8 col-12" role="navigation">
-			<ul class="nav nav-pills" id="nav-tab" role="tablist">
+			<ul class="nav nav-pills pb-2" id="nav-tabTournaments" role="tablist">
 				<li class="nav-item">
 					<a class="nav-link active" data-bs-toggle="tab" href="#schedule">Schedule</a>
 				</li>
