--- a/scoreboard/templates/admin/pages/forgot_password.html.j2
+++ b/scoreboard/templates/admin/pages/forgot_password.html.j2
@@ -10,7 +10,7 @@
 <div class="container-md">
   <div class="row justify-content-md-center mt-2">
     <div class="col-md-4 justify-content-center">
-      <img class="mb-4" src="/static/images/logo.png" alt="" width="324" height="128">
+      <img class="mb-4 w-100" src="/static/images/logo.png" alt="">
     {%- if message -%}
       <div class="alert alert-secondary" role="alert">
           <p>{{ message }}</p>
