--- a/scoreboard/templates/admin/pages/password_reset.html.j2
+++ b/scoreboard/templates/admin/pages/password_reset.html.j2
@@ -6,38 +6,31 @@
 
 {% block main %}
 
-<!-- Page Content -->
-<div class="container">
-	<main class="form-signin">
-		<form action="/login/reset" method="post" name="reset">
-			<img class="mb-4" src="/static/images/logo.png" alt="" width="300px">
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <div class="alert alert-danger" role="alert">
-          {% for message in messages %}
-            <p>{{ message }}</p>
-          {% endfor %}
-        </div>
-        {% endif %}
-      {% endwith %}
+<div class="container-md">
+  <div class="row justify-content-md-center mt-2">
+    <div class="col-md-4 justify-content-center">
+      <img class="mb-4 w-100" src="/static/images/logo.png" alt="">
+		</div>
+	</div>
+	<div class="row justify-content-md-center">
+		<div class="col-md-4">
 			<h1 class="h3 mb-3 fw-normal">Set Your New Password:</h1>
-
+			<form action="/login/reset" method="post" name="login">
 				<input type="hidden" name="token" value="{{ token }}">
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="password1" name="password1" class="form-control" placeholder="Password" required>
-				<label for="inputPassword" class="sr-only">Re-type</label>
-        <input type="password" id="password2" name="password2" class="form-control" placeholder="Re-Type" required>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Submit</button>
+				<div class="mb-3">
+					<label class="form-label" for="password1">New Password</label>
+					<input type="password" id="password1" name="password1" class="form-control" placeholder="Password" required>
+				</div>
+				<div class="mb-3">
+					<label class="form-label" for="password2">Re-type</label>
+					<input type="password" id="password2" name="password2" class="form-control" placeholder="Re-Type" required>
+				</div>
+				<div>
+					<button class="w-100 btn btn-lg btn-primary" type="submit">Set Password</button>
+				</div>
       </form>
-
-		  <div class="alert alert-info mt-3" role="alert">
-			  <p>If you are having trouble with your account please email me at
-				 <a href="mailto:info@uwhscores.com">info@uwhscores.com</a>
-			  </p>
-		  </div>
     </div>
   </div>
-
 </div>
 <!-- /.container -->
 
