--- a/scoreboard/templates/admin/common/admin_nav.html.j2
+++ b/scoreboard/templates/admin/common/admin_nav.html.j2
@@ -1,7 +1,7 @@
 {% block nav %}
     <!-- Navigation -->
     {% if request.host_url != "http://uwhscores.com/" -%}
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation" style="background-color: #8A0808;">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation" style="background-color: #8A0808 !important; ">
     {% else %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation">
     {%- endif %}
