--- a/scoreboard/templates/admin/pages/login.html.j2
+++ b/scoreboard/templates/admin/pages/login.html.j2
@@ -6,11 +6,12 @@
 
 {% block main %}
 
-<!-- Page Content -->
-<div class="container">
-	<main class="form-signin">
-	  <form class="mb-3" action="/login" method="post" name="login">
-	    <img class="mb-4" src="/static/images/logo.png" alt="" width="300px">
+
+
+<div class="container-md">
+  <div class="row justify-content-md-center mt-2">
+    <div class="col-md-4 justify-content-center">
+      <img class="mb-4 w-100" src="/static/images/logo.png" alt="">
 			{% with messages = get_flashed_messages() %}
 				{% if messages %}
 				<div class="alert alert-danger" role="alert">
@@ -20,22 +21,24 @@
 				</div>
 				{% endif %}
 			{% endwith %}
-	    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-	    <label for="inputEmail" class="visually-hidden">Email address</label>
-	    <input type="email" id="email" name="email" autocomplete="username" class="form-control" placeholder="Email address" required autofocus>
-	    <label for="inputPassword" class="visually-hidden">Password</label>
-	    <input type="password" id="password" name="password"autocomplete="current-password" class="form-control" placeholder="Password" required>
-	    <!-- <div class="checkbox mb-3">
-	      <label>
-	        <input type="checkbox" value="remember-me"> Remember me
-	      </label>
-	    </div> -->
-	    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-	  </form>
-		<div>
-			<a href="/login/forgot">Forgot your password?</a>
 		</div>
-	</main>
+	</div>
+	<div class="row justify-content-md-center">
+		<div class="col-md-4">
+			<form class="mb-3" action="/login" method="post" name="login">
+		    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+		    <label for="inputEmail" class="visually-hidden">Email address</label>
+		    <input type="email" id="email" name="email" autocomplete="username" class="form-control mb-3" placeholder="Email address" required autofocus>
+		    <label for="inputPassword" class="visually-hidden">Password</label>
+		    <input type="password" id="password" name="password"autocomplete="current-password" class="form-control mb-3" placeholder="Password" required>
+
+		    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+		  </form>
+			<div>
+				<a href="/login/forgot">Forgot your password?</a>
+			</div>
+		</div>
+	</div>
 </div>
 <!-- /.container -->
 
