Mistakenly removed flashes from password reset
Removed showing flashes from the password reset page by mistake. Added
them back in quick.

--- a/scoreboard/templates/admin/pages/password_reset.html.j2
+++ b/scoreboard/templates/admin/pages/password_reset.html.j2
@@ -10,6 +10,15 @@
   <div class="row justify-content-md-center mt-2">
     <div class="col-md-4 justify-content-center">
       <img class="mb-4 w-100" src="/static/images/logo.png" alt="">
+			{% with messages = get_flashed_messages() %}
+				{% if messages %}
+				<div class="alert alert-danger" role="alert">
+					{% for message in messages %}
+						<p>{{ message }}</p>
+					{% endfor %}
+				</div>
+				{% endif %}
+			{% endwith %}
 		</div>
 	</div>
 	<div class="row justify-content-md-center">
